<resources>
    <string name="app_name">TiketSaya</string>
    <string name="slogan">Wisata Jadi Lebih Asyik</string>
    <string name="get_started_text">Discover\nThe Beauty\nof Earth</string>
    <string name="sign_in">Sign In</string>
    <string name="new_account">New Account</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="email_label">Email</string>
    <string name="continue_label">Continue</string>
    <string name="name_label">Name</string>
    <string name="bio_label">Your Passion?</string>
    <string name="explore_label">Explore Now</string>
</resources>
